--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,6 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 Flask==3.0.2
-google-auth==2.24.0
-google-auth-oauthlib==1.1.0
-google-search-results==2.4.2
-googleapis-common-protos==1.63.0
 numpy==1.26.2
 oauthlib==3.2.2
 pandas==2.1.3
@@ -18,3 +14,4 @@ requests==2.28.2
 requests-oauthlib==1.3.1
 sodapy==2.2.0
 gunicorn==22.0.0
+sqlalchemy==2.0.20
